Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -40,7 +40,7 @@
 
 \cite{bonin2012modele} emergence of qualitatively different urban functions ; based on Alonso-Muth model.
 
-
+\cite{makse1998modeling} : model of urban growth involving urban form (here the local spatial correlations induce urban structure)
 
 
 
