--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,15 @@
 
 
 
+@article{makse1998modeling,
+	Author = {Makse, Hern{\'a}n A and Andrade, Jos{\'e} S and Batty, Michael and Havlin, Shlomo and Stanley, H Eugene and others},
+	Journal = {Physical Review E},
+	Number = {6},
+	Pages = {7054},
+	Title = {Modeling urban growth patterns with correlated percolation},
+	Volume = {58},
+	Year = {1998}}
+
 
 @inproceedings{bonin2012modele,
 	Author = {Bonin, Olivier and Hubert, Jean-Paul and others},
