Update on Overleaf.

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,61 @@
 
 
 
+@article{straus1977societal,
+	Author = {Straus, Murray A},
+	Journal = {Annals of the New York Academy of Sciences},
+	Number = {1},
+	Pages = {717--730},
+	Title = {Societal morphogenesis and intrafamily violence in cross-cultural perspective},
+	Volume = {285},
+	Year = {1977}}
+
+
+
+
+@article{mehaffy2007notes,
+	Author = {Mehaffy, Michael W},
+	Journal = {Urban Design International},
+	Number = {1},
+	Pages = {41--49},
+	Title = {Notes on the genesis of wholes: Christopher Alexander and his continuing influence},
+	Volume = {12},
+	Year = {2007}}
+
+
+
+@article{renfrew1978trajectory,
+	Author = {Renfrew, Colin},
+	Journal = {American Antiquity},
+	Pages = {203--222},
+	Title = {Trajectory discontinuity and morphogenesis: the implications of catastrophe theory for archaeology},
+	Year = {1978}}
+
+
+
+
+@article{achibet2014model,
+	Author = {Achibet, Merwan and Balev, Stefan and Dutot, Antoine and Olivier, Damien},
+	Journal = {Procedia Computer Science},
+	Pages = {828--833},
+	Title = {A Model of Road Network and Buildings Extension Co-evolution},
+	Volume = {32},
+	Year = {2014}}
+
+
+
+
+@article{thom1974stabilite,
+	Author = {Thom, Ren{\'e}},
+	Journal = {Poetics},
+	Number = {2},
+	Pages = {7--19},
+	Title = {Stabilit{\'e} structurelle et morphog{\'e}n{\`e}se},
+	Volume = {3},
+	Year = {1974}}
+
+
+
 @article{makse1998modeling,
 	Author = {Makse, Hern{\'a}n A and Andrade, Jos{\'e} S and Batty, Michael and Havlin, Shlomo and Stanley, H Eugene and others},
 	Journal = {Physical Review E},
@@ -47,3 +102,29 @@
 	Volume = {3},
 	Year = {1982}}
 
+@article{abercrombie1977concepts,
+  title={Concepts in morphogenesis},
+  author={Abercrombie, Michael},
+  journal={Proceedings of the Royal Society of London B: Biological Sciences},
+  volume={199},
+  number={1136},
+  pages={337--344},
+  year={1977},
+  publisher={The Royal Society}
+}
+@article{gilbert2003morphogenesis,
+  title={The morphogenesis of evolutionary developmental biology},
+  author={Gilbert, Scott F},
+  journal={International Journal of Developmental Biology},
+  volume={47},
+  number={7-8},
+  pages={467},
+  year={2003}
+}
+@article{thompson1942growth,
+  title={On growth and form.},
+  author={Thompson, Darcy Wentworth and others},
+  journal={On growth and form.},
+  year={1942},
+  publisher={Cambridge Univ. Press}
+}
