--- a/review.tex
+++ b/review.tex
@@ -10,22 +10,49 @@
 %%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 
-
+At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, and then electrical and now computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. 
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
 \section{Reviews}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Development Biology}
 
+% Lars : C Elegans : more a concept. models of force transmission. how the form comes from the molecular perspective ; but only physics model.
+%  others : qualitative description. no network stuff. rq : not necessary to have networks.
+%  fundamental idea. how does the shape control the function.
+% Celegans totally precisely determined.
+
+% Zebrafish devlpmt.
+
+% compare the two biological approach ?
+%   comparative biology ? -> many species studied.
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Artificial Intelligence}
+
+% taken from Emanuele's review
+% link : https://www.dropbox.com/s/agug14i106eig9f/Artificial%20Self-Assembly.pdf?dl=0
+
+The notion of \emph{Programmable Self-Assembly} seems for students of Artificial Life to be very close to the biological concept of morphogenesis : ``The greater example of Programmable Self-Assembly in nature is proba-bly the cell organisation in multicellular organisms, which is encoded by the DNA.''
+
+\textit{comes into Doursat's concept of Morphogenetic engeneering : only an analogy or common ontological fundations ?}
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Territorial Sciences}
 
-\paragraph{Conceptual use}
+\textit{The concept is used in various disciplines dealing with territories and the built environment : geography, urban planning and design, urbanism, architecture. There not seem to be a unified view nor theory among these various fields, but even in each field itself.}
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\paragraph{Built Environment}
 
 \textit{Architecture/Urbanism}
 
@@ -33,7 +60,10 @@
 
 \cite{moudon1997urban} geography, architecture and urban planning (most prefer the term of urban morphology $\rightarrow$ sets up the importance of the form compared to dynamics ?)
 
+\cite{mehaffy2007notes} Alexander is an illuminated Architect that produced a theory of design process, inspired from computer science and biology - linked in some aspects to complexity. \textit{seems to have some link to the genesis of architectural forms by pattern combination ; self-organisation ; path-dependency - but difficult to understand exactly what they are talking about, really artistic.}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Modeling}
 
 \textit{Urban growth modeling literature.}
@@ -42,14 +72,56 @@
 
 \cite{makse1998modeling} : model of urban growth involving urban form (here the local spatial correlations induce urban structure)
 
+\cite{achibet2014model} model of co-evolution between road network and urban blocks structure
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\paragraph{Archeology}
+
+\cite{renfrew1978trajectory} : the morphogenesis of human settlements viewed from Thom's theory point of view. Sudden changes (qualitative changes) have occurred at any time and can be viewed as bifurcations during the morphogenesis process. [\textit{Note : link with the notion of transition (transmondyn) that must then be more than an evolution of meta-parameters of the dynamics (non-stationarity), but where bifurcations can occur - clarify parameter evolution in Thom's theory}]
 
 
 
 
-
+%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Psychology}
 
+% discussion with Mario : morphogenesis of ideas as qualitative emergence ?
+
+% not sure exactly psychology, but found paper using the notion of "social mrophogenesis" to explain the emergence of different cultures
+\cite{straus1977societal}
+% socio-psychology
+
+% first paper : 1918
+
+% not very used, but useful. similarity found in processes of the mind. there is morphogen in the physical biology of the brain. similarity in the psychological structure. what is the basic unit ?
+% ideas, personality.
+%  (45 articles)
+%  <-> link literature self-org, fractals
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{History of the notion}
+The study of morphogenesis started with embryology between just before 1930's. This is about the same time as Hodgkin and Lister, reported seeing red blood cells under a microscope, and less than 10 years before Dujardin's discovery of cellular movement in Amoeba. \cite{abercrombie1977concepts} Using google book, the first use of the word morphogenesis in a book is in 1871, saw a large peak in usage between 1907-1909, and continued to increase in usage until the 1990's before slowing decreasing in usage. 
+The study of morphology has been tightly linked to statistical modeling. 
+
+
+% TODO : correspodnance with currents in hostory of science
+
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Others}
+Morphogenesis is also used for the advent of new study, \cite{gilbert2003morphogenesis}
+... ... 
+
+\bigskip
+
+\paragraph{A mathematical approach}
+
+Ren{\'e} Thom~\cite{thom1974stabilite} : \textit{Structural stability and Morphogenesis.} \textit{Recalls many important notions, e.g. quantitative/qualitative.} Thom has developed a theory of system dynamics, the ``catastrophe theory'', that studies in deep the impact of topological structure of phase space manifolds on a system dynamics. Let $M$ a differentiable manifold, in which system state $(m,\dot{m})$ is embedded. We assume the existence of a closed set $K$, called \emph{Catastrophe set}. The topological type of $K$ is indeed endogeneously determined by system dynamics (in simple cases, it refers to the "classical" type of attractors/fixed points usually known : points, limit cycles). When $m$ encounters $K$ [\textit{need more precision here, how can a dynamic cross a catastrophe - does not work for attractors or limit cycles}], the system follows a \emph{qualitative} change in its form, what constitutes the basis of \textbf{morphogenesis}. This abstract theory of morphogenesis is independent of the nature of the system studied, its main contribution being to classify local catastrophes that occur during morphogenesis. Differentiation and richness of patterns have thus a geometrical explanation through the topological types of catastrophes. Thom notes that at this time, the study of form has mainly be the focus of biology, but that many applications could be done in physics and geomorphology for example (formulating the hypothesis that it is because it implies discontinuities and self-organisation, to which mathematicians were repulsive - \textit{interesting, links to the rise of complexity approach, now complexity paradigms are spreading in various disciplines, and the study of morphogenesis seem to have followed.}).
+
 
 
 
@@ -57,6 +129,42 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%
 \section{Synthesis}
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Key notions}
+
+\textit{Main concepts that come out from this review, and on which we think it is necessary to think. Each may be domain-dependent, and answer may vary from one field to the other ?}
+
+% Q Chenling : role of function ? Juste : necessary.
+
+% Biological tissue : cells collaborating. over a certain level of complexity becomes more stochastic.
+
+% Q that we will have to answer : overlaps with over concepts.
+
+% TODO find synonyms
+
+% TODO : also list all fields using it.
+
+%%%%%%%%%%%%%%
+% Tasks :
+%   Lars : Zebrafish
+%   Mario : psycho bio [rq : mapping of words to brain areas]
+%
+
+
+\begin{itemize}
+\item \textbf{Self-organisation} : morphogenesis implies self-organisation but the contrary is not necessarily true ? what aspects are specific of morphogenesis ? 
+% there is not the self-replicating part (autopoiesis - life ?)
+\item \textbf{Patterns and shape} : ``the formation of shapes'' seems to be common to all approaches to morphogenesis ?
+\item \textbf{Qualitative vs Quantitative} : \textit{(Juste) I need to work more on that by I have the feeling that qualitative bifurcations are a fundamental concept in morphogenesis : e.g. differentiation of organs in biology ; emergence of differentiated urban functions}
+\item \textbf{Symmetry} \textit{not sure, need to think about that} $\rightarrow$ symmetry breaking occurs at early stages (all stages ?) of morphogenesis ?
+\item \textbf{Death} - in relation with life ? (read philo on that)
+\item \textbf{Unit and Scale}
+% Q; do you need a fixed scale ? 
+%  corals, tissue collaborating. fractal-like. idem in cities.
+\item \textbf{Boundaries}
+\end{itemize}
+
 
 
 
