Update on Overleaf.

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,21 @@
 
 
 
+
+
+
+@article{bourgine2004autopoiesis,
+	Author = {Bourgine, Paul and Stewart, John},
+	Journal = {Artificial life},
+	Number = {3},
+	Pages = {327--345},
+	Title = {Autopoiesis and cognition},
+	Volume = {10},
+	Year = {2004}}
+
+
+
+
 @article{straus1977societal,
 	Author = {Straus, Murray A},
 	Journal = {Annals of the New York Academy of Sciences},
