--- a/review.tex
+++ b/review.tex
@@ -3,6 +3,7 @@
 \begin{document}
 
 \title{An Interdisciplinary Review on Morphogenesis}
+% alternative epic title : Morphogenesis : a Tale of Life and Death
 \date{}
 
 \maketitle
@@ -27,7 +28,8 @@ At every historical period, people use the main technological advance as a metap
 % Celegans totally precisely determined.
 
 % Zebrafish devlpmt.
-
+% Comprehensive review of Turing Patterns: Kondo&Miura Science (2010)
+% First in depth application of this theory to biology by Gierer&Meinhardt Kybernetik (1972), field founded by Turing (1952)
 % compare the two biological approach ?
 %   comparative biology ? -> many species studied.
 
@@ -108,7 +110,7 @@ The study of morphogenesis started with embryology between just before 1930's. T
 The study of morphology has been tightly linked to statistical modeling. 
 
 
-% TODO : correspodnance with currents in hostory of science
+% TODO : correspodnance with currents in history of science
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -123,7 +125,17 @@ Morphogenesis is also used for the advent of new study, \cite{gilbert2003morphog
 Ren{\'e} Thom~\cite{thom1974stabilite} : \textit{Structural stability and Morphogenesis.} \textit{Recalls many important notions, e.g. quantitative/qualitative.} Thom has developed a theory of system dynamics, the ``catastrophe theory'', that studies in deep the impact of topological structure of phase space manifolds on a system dynamics. Let $M$ a differentiable manifold, in which system state $(m,\dot{m})$ is embedded. We assume the existence of a closed set $K$, called \emph{Catastrophe set}. The topological type of $K$ is indeed endogeneously determined by system dynamics (in simple cases, it refers to the "classical" type of attractors/fixed points usually known : points, limit cycles). When $m$ encounters $K$ [\textit{need more precision here, how can a dynamic cross a catastrophe - does not work for attractors or limit cycles}], the system follows a \emph{qualitative} change in its form, what constitutes the basis of \textbf{morphogenesis}. This abstract theory of morphogenesis is independent of the nature of the system studied, its main contribution being to classify local catastrophes that occur during morphogenesis. Differentiation and richness of patterns have thus a geometrical explanation through the topological types of catastrophes. Thom notes that at this time, the study of form has mainly be the focus of biology, but that many applications could be done in physics and geomorphology for example (formulating the hypothesis that it is because it implies discontinuities and self-organisation, to which mathematicians were repulsive - \textit{interesting, links to the rise of complexity approach, now complexity paradigms are spreading in various disciplines, and the study of morphogenesis seem to have followed.}).
 
 
+\paragraph{Autopoiesis and Morphogenesis}
 
+The notion of \emph{autopoiesis} expresses the ability for a system to reproduce itself. A basic characterization is a semi-permeable boundary produced within the system and the ability to reproduce its components. A more general definition is proposed by Bourgine and Stewart in~\cite{bourgine2004autopoiesis} : \textit{``An autopoietic system is a network of processes that produces the components that reproduce the network, and that also regulates the boundary conditions necessary for its ongoing existence as a network''}. The notion of dynamical processes is key, and could be linked to Thom's theory of morphogenesis. They furthermore introduce a definition of cognition (trigger actions as function of sensitory inputs to ensure viability), and of living organism as autopoietic and cognitive. \textit{In that frame, for example, the arbotron is cognitive but not autopoietic ?}
+
+autopoietic systems $\subset$ Morphogenetic systems $\subset$ Self-organization
+
+$\rightarrow$ give diagram and examples ? (arbotron ; ant colony ; organisms ; cities ; etc. )
+
+\paragraph{Co-evolution}
+
+\textit{reflexion : if morphogenesis can be transposed to ecosystem or societies, the components of the system are co-evolving $\rightarrow$ co-evolving components (more than strongly correlated) can be a necessary condition for exhibiting morphogenesis ?}
 
 
 
@@ -164,6 +176,15 @@ Ren{\'e} Thom~\cite{thom1974stabilite} : \textit{Structural stability and Morpho
 %  corals, tissue collaborating. fractal-like. idem in cities.
 \item \textbf{Boundaries}
 \end{itemize}
+
+
+%%%%%%%%%%%%%%%%%%%
+%% Meeting 29/06
+%%%%%%%%%%%%%%%%%%%
+
+
+
+
 
 
 
