--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,147 @@
 
 
 
+@article{voss2012multi,
+	Author = {Voss-B{\"o}hme, Anja},
+	Journal = {PloS one},
+	Number = {9},
+	Pages = {e42852},
+	Title = {Multi-scale modeling in morphogenesis: a critical analysis of the cellular Potts model},
+	Volume = {7},
+	Year = {2012}}
+
+
+
+@inproceedings{raimbault2014hybrid,
+  title={A Hybrid Network/Grid Model of Urban Morphogenesis and Optimization},
+  author={Raimbault, Juste and Banos, Arnaud and Doursat, Ren{\'e}},
+  booktitle={Proceedings of the 4th International Conference on Complex Systems and Applications (ICCSA 2014)},
+  pages={51--60},
+  year={2014}
+}
+
+
+
+@incollection{cussat2012synthesis,
+	Author = {Cussat-Blanc, Sylvain and Pascalie, Jonathan and Mazac, S{\'e}bastien and Luga, Herv{\'e} and Duthen, Yves},
+	Booktitle = {Morphogenetic Engineering},
+	Pages = {353--381},
+	Publisher = {Springer},
+	Title = {A synthesis of the Cell2Organ developmental model},
+	Year = {2012}}
+
+
+
+@inproceedings{doursat2008programmable,
+	Author = {Doursat, Ren{\'e}},
+	Booktitle = {ALIFE},
+	Pages = {181--188},
+	Title = {Programmable Architectures That Are Complex and Self-Organized-From Morphogenesis to Engineering.},
+	Year = {2008}}
+
+
+
+@techreport{crosato2014self,
+	Author = {E. Crosato},
+	Institution = {Vrije Universiteit Amsterdam},
+	Title = {Artificial Self-Assembly : Literature Review},
+	Year = {2014}}
+
+
+
+@book{bourgine2010morphogenesis,
+	Author = {Bourgine, Paul and Lesne, Annick},
+	Publisher = {Springer Science \& Business Media},
+	Title = {Morphogenesis: origins of patterns and shapes},
+	Year = {2010}}
+
+
+
+
+@article{han2016coordinating,
+	Author = {Han, Peidong and Bloomekatz, Joshua and Ren, Jie and Zhang, Ruilin and Grinstein, Jonathan D and Zhao, Long and Burns, C Geoffrey and Burns, Caroline E and Anderson, Ryan M and Chi, Neil C},
+	Journal = {Nature},
+	Number = {7609},
+	Pages = {700--704},
+	Title = {Coordinating cardiomyocyte interactions to direct ventricular chamber morphogenesis},
+	Volume = {534},
+	Year = {2016}}
+
+
+
+
+
+@article{minter2012morphogenesis,
+	Author = {Minter, Nicholas J and Franks, Nigel R and Brown, Katharine A Robson},
+	Journal = {Journal of the Royal Society Interface},
+	Number = {68},
+	Pages = {586--595},
+	Title = {Morphogenesis of an extended phenotype: four-dimensional ant nest architecture},
+	Volume = {9},
+	Year = {2012}}
+
+
+
+
+@article{chapman1998morphogenesis,
+  title={Morphogenesis by symbiogenesis},
+  author={Chapman, Michael J and Margulis, Lynn},
+  journal={International Microbiology},
+  volume={1},
+  number={4},
+  year={1998}
+}
+
+
+
+@article{doursat2013review,
+  title={A review of morphogenetic engineering},
+  author={Doursat, Ren{\'e} and Sayama, Hiroki and Michel, Olivier},
+  journal={Natural Computing},
+  volume={12},
+  number={4},
+  pages={517--535},
+  year={2013},
+  publisher={Springer}
+}
+
+
+
+@article{gierer1972theory,
+  title={A theory of biological pattern formation},
+  author={Gierer, Alfred and Meinhardt, Hans},
+  journal={Kybernetik},
+  volume={12},
+  number={1},
+  pages={30--39},
+  year={1972},
+  publisher={Springer}
+}
+
+
+
+@article{kondo2010reaction,
+  title={Reaction-diffusion model as a framework for understanding biological pattern formation},
+  author={Kondo, Shigeru and Miura, Takashi},
+  journal={science},
+  volume={329},
+  number={5999},
+  pages={1616--1620},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{lord1981cleistogamy,
+  title={Cleistogamy: a tool for the study of floral morphogenesis, function and evolution},
+  author={Lord, Elizabeth M},
+  journal={The Botanical Review},
+  volume={47},
+  number={4},
+  pages={421--449},
+  year={1981},
+  publisher={Springer}
+}
+
 
 
 
@@ -142,4 +283,24 @@
   journal={On growth and form.},
   year={1942},
   publisher={Cambridge Univ. Press}
+}
+@article{nakamasu2009interactions,
+  title={Interactions between zebrafish pigment cells responsible for the generation of Turing patterns},
+  author={Nakamasu, Akiko and Takahashi, Go and Kanbe, Akio and Kondo, Shigeru},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={21},
+  pages={8429--8434},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+@article{goryachev2008dynamics,
+  title={Dynamics of Cdc42 network embodies a Turing-type mechanism of yeast cell polarity},
+  author={Goryachev, Andrew B and Pokhilko, Alexandra V},
+  journal={FEBS letters},
+  volume={582},
+  number={10},
+  pages={1437--1443},
+  year={2008},
+  publisher={Wiley Online Library}
 }
