Update on Overleaf.

--- a/presentation.tex
+++ b/presentation.tex
@@ -81,7 +81,7 @@
 %%%%%%%%%%%%%%%%%%
 \section{Examples}
 
-\jframe{Example : biology}{
+\jframe{Example : How do patterns arise during animal development}{
 % bio 1
 
 }
