--- a/review.tex
+++ b/review.tex
@@ -12,6 +12,14 @@
 
 \maketitle
 
+
+\begin{abstract}
+The notion of morphogenesis seems to play an important role in the study of a broad range of complex systems. If the concept was introduced in embryology to design growth of organisms, it was rapidly used in various fields, e.g. urbanism, geomorphology, psychology. However, the use of the concept seems generally fuzzy and to have a field-specific definition for each use. We propose in this paper an epistemological study, starting with a broad interdisciplinary review and extracting essential notions linked to morphogenesis across fields. The aim is to build a consistent general meta-framework for morphogenesis, and to study the particular deviations from it. Further work may include concrete application of the framework on particular cases to operate interdisciplinary transfers of concepts, and quantitative text analysis to strengthen qualitative results.
+\end{abstract}
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 
@@ -133,7 +141,7 @@ Morphogenesis has been sparsely used as a useful metaphor to understand differen
 In social psychology we have remarkable examples like the morphogenetic approach proposed by Margaret Archer applied to the problem of structure and agency, in other words, how we both shape society and are shaped by it in a dynamic interplay. Thus the morphogenetic approach offers a new understanding of social change and of the subject within it.  
 
 Nonetheless, more than a systematic consensus in it’s usage, there is a common perception of it’s explanatory power to grasp notions that show remarkable morphogenetic concordance. 
-We will focus it’s usage in the field of Psychoanalysis, where it has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that 
+We will focus it’s usage in the field of Psychoanalysis, where it has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D.), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
 
 
 
@@ -245,12 +253,16 @@ Most system studied seem to have the particularity to exhibit an architecture, w
 
 \subsection{Perspectives}
 
-
+\begin{itemize}
+\item Systematize the framework : iterative construction ; systematic comparisons
+\item Apply to a particular subject/model
+\item Algorithmic Literature Review and Text-mining : quantitative epistemology
+\end{itemize}
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\section{Conclusion}
+%\section{Conclusion}
 
 
 
