--- a/review.tex
+++ b/review.tex
@@ -1,16 +1,31 @@
-\documentclass{article}
+\documentclass[fleqn,10pt]{wlscirep}
 \usepackage[utf8]{inputenc}
-\begin{document}
+\usepackage{amsfonts,amssymb,amsmath}
+\usepackage{graphicx}
+
 
 \title{An Interdisciplinary Approach to Morphogenesis}
 % alternative epic title : Morphogenesis : a Tale of Life and Death
 
-\author{C. Antelope, L. Hubatsch, J. Raimbault, J.M. Serna}
+\author[1]{Chenling Antelope}
+\author[2]{Lars Hubatsch}
+\author[3]{Juste Raimbault}
+\author[4]{Jesus Mario Serna}
 % E. Crosato : Emanuele may contribute later but does not want to be in 
 
-\date{July 6th, 2016}
+\affil[1]{Affiliation, department, city, postcode, country}
+\affil[2]{Affiliation, department, city, postcode, country}
 
-\maketitle
+\affil[*]{corresponding.author@email.example}
+
+\affil[+]{these authors contributed equally to this work}
+
+
+%\date{July 6th, 2016}
+
+%\keywords{Keyword1, Keyword2, Keyword3}
+
+%\maketitle
 
 
 \begin{abstract}
@@ -20,18 +35,28 @@ The notion of morphogenesis seems to play an important role in the study of a br
 
 
 
+\begin{document}
+
+
+\flushbottom
+\maketitle
+
+\thispagestyle{empty}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%
-\section{Introduction}
+\section*{Introduction}
 
 At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, and then electrical and now computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in \cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we attend to do. Furthermore, examples are far from exhausted and our review is thus complementary.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\section{Reviews}
+\section*{Reviews}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Development Biology}
+\subsection*{Development Biology}
 \begin{itemize}
 \item{Reaction Diffusion} 
 
@@ -59,7 +84,7 @@ Evolution has also produced reaction-diffusion processes that
 
 % compare the two biological approach ?
 %   comparative biology ? -> many species studied.
-\subsubsection{Mechanistic modeling}
+\subsubsection*{Mechanistic modeling}
 Multi-Scale Modeling in Morphogenesis: A Critical Analysis of the Cellular Potts Model (Voss-Boehme, 2012)
 Modeling tissue morphogenesis and cancer in 3D Yamada (2007)
 Forces in Tissue Morphogenesis and Patterning (Heisenberg, 2012)
@@ -93,7 +118,7 @@ The patterns of an ant nest are the result of ``the morphogenesis of an extended
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Artificial Intelligence}
+\subsection*{Artificial Intelligence}
 
 % taken from Emanuele's review
 % link : https://www.dropbox.com/s/agug14i106eig9f/Artificial%20Self-Assembly.pdf?dl=0
@@ -104,7 +129,7 @@ As reviewed in~\cite{crosato2014self}, the notion of \emph{Programmable Self-Ass
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Territorial Sciences}
+\subsection*{Territorial Sciences}
 
 \textit{The concept is used in various disciplines dealing with territories and the built environment : geography, urban planning and design, urbanism, architecture. There not seem to be a unified view nor theory among these various fields, but even in each field itself.}
 
@@ -134,7 +159,7 @@ The Urban growth modeling literature often refer to the growth process as morpho
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Psychology}
+\subsection*{Psychology}
 
 Morphogenesis has been sparsely used as a useful metaphor to understand different processes in various psychological fields. For example, in Developmental Psychology one can think of the relation to evolution of human cultural behavior and learning, epigenetic neural systems, and their influence on neural development and behavior throughout life , and in Clinical psychology and psychopathology we have analogies in the emergent of psychical structures and the self-organization of forms of relation with the self and the other, and of course in Neuroscience we have a plethora of morphogenetic phenomena related to  the structure of the neural nets and “hardware” of the brain.
 
@@ -164,7 +189,7 @@ We will focus it’s usage in the field of Psychoanalysis, where it has been evo
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection{History of the notion}
+\subsection*{History of the notion}
 The study of morphogenesis started with embryology between just before 1930's. This is about the same time as Hodgkin and Lister, reported seeing red blood cells under a microscope, and less than 10 years before Dujardin's discovery of cellular movement in Amoeba. \cite{abercrombie1977concepts} Using google book, the first use of the word morphogenesis in a book is in 1871, saw a large peak in usage between 1907-1909, and continued to increase in usage until the 1990's before slowing decreasing in usage. 
 The study of morphology has been tightly linked to statistical modeling. 
 %Turing was a member of The Ratio Club, as was Ashby. Ashby’s Cyberneticss is consistent with Whitehead’s theory and Turing’s model, and gives an explanation as to why new equilibria so commonly emerge, rather than having chaos. (Keynes’ more jaundiced view was that we only see structure and simply ignore the chaos, treating it as ‘random’. There may be an element of truth in both views. But Ashby’s is less challenging.
@@ -173,7 +198,7 @@ The study of morphology has been tightly linked to statistical modeling.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Others}
+\subsection*{Others}
 
 \paragraph{Epistemology}
 
@@ -202,10 +227,10 @@ Symbiosis in biology can lead to very strong causalities in organism evolution (
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\section{Synthesis}
+\section*{Synthesis}
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Key notions}
+\subsection*{Key notions}
 
 \textit{Main concepts that come out from this review, and on which we think it is necessary to think. Each may be domain-dependent, and answer may vary from one field to the other ?}
 
@@ -231,7 +256,7 @@ Symbiosis in biology can lead to very strong causalities in organism evolution (
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Common processes and differences}
+\subsection*{Common processes and differences}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{From local interactions to global information flow}
@@ -249,9 +274,9 @@ Most system studied seem to have the particularity to exhibit an architecture, w
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\section{Discussion}
+\section*{Discussion}
 
-\subsection{Perspectives}
+\subsection*{Perspectives}
 
 \begin{itemize}
 \item Systematize the framework : iterative construction ; systematic comparisons
@@ -270,7 +295,7 @@ Most system studied seem to have the particularity to exhibit an architecture, w
 %%%%%%%%%%%%
 % biblio
 
-\bibliographystyle{apalike}
+%\bibliographystyle{apalike}
 \bibliography{biblio}
 
 
@@ -336,7 +361,95 @@ Most system studied seem to have the particularity to exhibit an architecture, w
 
 
 
-
-
-
 \end{document}
+
+
+
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% TEMPLATES
+
+
+
+%\section*{Introduction}
+
+%The Introduction section, of referenced text\cite{Figueredo:2009dg} expands on the background of the work (some overlap with the Abstract is acceptable). The introduction should not include subheadings.
+
+%\section*{Results}
+
+%Up to three levels of \textbf{subheading} are permitted. Subheadings should not be numbered.
+
+%\subsection*{Subsection}
+
+%Example text under a subsection. Bulleted lists may be used where appropriate, e.g.
+
+%\begin{itemize}
+%\item First item
+%\item Second item
+%\end{itemize}
+
+%\subsubsection*{Third-level section}
+ 
+%Topical subheadings are allowed.
+
+%\section*{Discussion}
+
+%The Discussion should be succinct and must not contain subheadings.
+
+%\section*{Methods}
+
+%Topical subheadings are allowed. Authors must ensure that their Methods section includes adequate experimental and characterization data necessary for others in the field to reproduce their work.
+
+%\bibliography{sample}
+
+%\noindent LaTeX formats citations and references automatically using the bibliography records in your .bib file, which you can edit via the project menu. Use the cite command for an inline citation, e.g.  \cite{Figueredo:2009dg}.
+
+%\section*{Acknowledgements (not compulsory)}
+
+%Acknowledgements should be brief, and should not include thanks to anonymous referees and editors, or effusive comments. Grant or contribution numbers may be acknowledged.
+
+%\section*{Author contributions statement}
+
+%Must include all authors, identified by initials, for example:
+%A.A. conceived the experiment(s),  A.A. and B.A. conducted the experiment(s), C.A. and D.A. analysed the results.  All authors reviewed the manuscript. 
+
+%\section*{Additional information}
+
+%To include, in this order: \textbf{Accession codes} (where applicable); \textbf{Competing financial interests} (mandatory statement). 
+
+%The corresponding author is responsible for submitting a \href{http://www.nature.com/srep/policies/index.html#competing}{competing financial interests statement} on behalf of all authors of the paper. This statement must be included in the submitted article file.
+
+%\begin{figure}[ht]
+%\centering
+%\includegraphics[width=\linewidth]{stream}
+%\caption{Legend (350 words max). Example legend text.}
+%\label{fig:stream}
+%\end{figure}
+
+%\begin{table}[ht]
+%\centering
+%\begin{tabular}{|l|l|l|}
+%\hline
+%Condition & n & p \\
+%\hline
+%A & 5 & 0.1 \\
+%\hline
+%B & 10 & 0.01 \\
+%\hline
+%\end{tabular}
+%\caption{\label{tab:example}Legend (350 words max). Example legend text.}
+%\end{table}
+
+%Figures and tables can be referenced in LaTeX using the ref command, e.g. Figure \ref{fig:stream} and Table \ref{tab:example}.
+
+
+
+
+
+
