--- a/review.tex
+++ b/review.tex
@@ -270,7 +270,32 @@ Symbiosis in biology can lead to very strong causalities in organism evolution (
 Most system studied seem to have the particularity to exhibit an architecture, what would make the distinction between self-organization and morphogenesis. This idea comes from the field of morphogenetic engineering (which can be seen as a subfield of artificial intelligence). This point may be a divergence point on some fields, as for example in physical science, where the ``morphogenesis'' of terrain patterns is a self-organization in our sense. The notion of architecture may be tricky to define. A way to do it is to consider the functions of macro-levels in the system : the emergence of function at an upper level implies an architecture, which is \emph{the link between the form and the function}. Here this last concept takes all its sense and importance in regard to morphogenesis.
 
 
+%%%%%%%%%%%%%%%%%%%%%%%
+\subsection*{Proposition of a Meta-epistemological Framework}
 
+
+We propose the following hierarchical organisation of concepts :
+
+Self-organization $\supsetneq$ Morphogenesis $\supsetneq$ Autopoiesis $\supsetneq$ Life
+
+each having a precise definition, elaborated from the synthesis of disciplines.
+
+\textit{clarify definitions}
+
+The boundary between self-organization and morphogenesis is the link between form and function, which can be defined as \emph{architecture}~\cite{doursat2013review}.
+
+The complexity of systems increase with notion depth, what can be embodied in the fact that :
+\begin{itemize}
+\item Emergence strength~\cite{bedau2002downward} diminishes with depth, i.e. the number of autonomous scales increases.
+\item Number of bifurcations increases~\cite{thom1974stabilite}, i.e. path-dependancy increases.
+\end{itemize}
+
+
+\paragraph{Application}
+
+An ontological specification~\cite{livet2010ontology} yields an application to a particular field, each one developing its own properties and level of inclusion between concepts. 
+
+\textit{need to clarify correspondence/equivalence of projected concepts}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
